--- a/assets/css/storefront/components/_checkout.scss
+++ b/assets/css/storefront/components/_checkout.scss
@@ -62,6 +62,9 @@
       &:last-child {
         border-right: 1px solid $gray-color-2;
       }
+      //.payment-methods {
+      //  border
+      //}
     }
   }
   h2, h3 {
@@ -234,12 +237,20 @@
   }
   &__payment {
     &__method {
+      padding: 16px;
+      padding-right: 16px;
+      background-color: $gray-color-3;
+      margin-bottom: 16px;
+      &:last-child {
+        margin-bottom: inherit;
+      }
       &.radio {
         display: flex;
-        span {
-          margin-top: auto;
-          margin-bottom: auto;
-        }
+        //span {
+        //  margin-top: auto;
+        //  margin-bottom: auto;
+        //}
+        border-bottom: none;
       }
     }
   }
@@ -247,8 +258,13 @@
 
 .payment {
   &__card {
+    width: 100%;
+    position: relative;
     display: flex;
     flex-direction: row;
+    margin-left: 8px;
+    margin-right: 8px;
+    justify-content: space-between;
     &__element {
       margin-right: 16px;
       &:last-child {
@@ -258,20 +274,44 @@
     &__image {
       margin-top: auto;
       margin-bottom: auto;
+      height: 25px;
+      width: auto;
+      img {
+        height: 100%;
+      }
     }
     &__info {
       margin-bottom: auto;
       margin-top: auto;
     }
+    &__panel {
+      width: 100%;
+      display: flex;
+      position: relative;
+      .delete {
+        color: $brand-secondary-color-red;
+        cursor: pointer;
+        display: none;
+        font-size: 24px;
+        line-height: 12px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        &:hover {
+          color: $brand-color-black;
+        }
+      }
+      &:hover {
+        .delete {
+          display: inherit;
+        }
+      }
+    }
   }
   &__method {
-    margin-top: auto !important;
-    margin-bottom: auto !important;
+    height: inherit !important;
+    margin-top: 4px !important;
   }
-}
-
-.proceed-btn-payment {
-  margin-top: 48px !important;
 }
 
 .pay-order {
