--- a/assets/css/storefront/components/_charts.scss
+++ b/assets/css/storefront/components/_charts.scss
@@ -21,8 +21,8 @@ $bestseller-item-padding: 7px;
     height: 268px;
     margin-bottom: 3em;
     img {
-      height: 208px;
-      width: 100%;
+      //height: 208px;
+      //width: 100%;
       background-color: $brand-color-green;
     }
     &__name {
