--- a/assets/css/storefront/components/_tables.scss
+++ b/assets/css/storefront/components/_tables.scss
@@ -39,7 +39,7 @@
       padding: 0px 14px;
       line-height: 24px;
     }
-    &.close {
+    &.close-detail {
       background-color: $brand-color-black;
       &:hover {
         background-color: lighten($brand-color-black, 10)
