--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -22,6 +22,9 @@
       max-width: 65%;
       overflow: hidden;
       text-overflow: ellipsis;
+      &:hover {
+        color: $brand-color-green;
+      }
     }
     &__price {
       position: relative;
@@ -46,6 +49,9 @@
     font-size: $font-size-sm;
     opacity: 0.6;
     color: $brand-color-black;
+    &:hover {
+      color: $brand-color-green;
+    }
   }
 }
 
