Confirm terms and conditions before placing order

--- a/assets/css/storefront/components/_forms.scss
+++ b/assets/css/storefront/components/_forms.scss
@@ -95,6 +95,35 @@ select.form-control {
   background-color: white;
 }
 
+input[type=checkbox] {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  border: 1px solid #cacece;
+  padding: 7px;
+  border-radius: 0px;
+  display: inline-block;
+  position: relative;
+  margin-right: 10px;
+  top: 2px;
+  &:checked {
+    background-color: white;
+    border: 1px solid #adb8c0;
+    color: #99a1a7;
+    &:after {
+      content: '\2713';
+      font-size: 14px;
+      position: absolute;
+      top: -3px;
+      left: 2px;
+      color: #30C46C;
+    }
+  }
+  &:focus {
+    outline: none;
+    background-color: white;
+  }
+}
+
 
 .form-control {
   padding-left: 16.5px;
