--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -40,5 +40,6 @@
 @import "components/common";
 @import "components/mobile";
 @import "components/filter-modal";
+@import "components/info";
 
 @import "components/newsletter";
