Change info terms and conditions slug

--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -77,15 +77,18 @@
       }
     }
     &__oye {
-      width: 200px;
       display: flex;
       flex-direction: row;
       height: 100%;
       .ah-link {
+        margin-right: 40px;
         width: auto;
         border-left: none;
         padding: 0;
         border-left: none;
+        &:last-child {
+          margin-right: inherit;
+        }
       }
       &__newsletter {
         margin-right: 40px;
