--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -132,3 +132,18 @@ body {
           -webkit-linear-gradient(-45deg, transparent 0%, transparent 48%, $brand-color-black 48%,  $brand-color-black 52%, transparent 52%, transparent 100%),
           -webkit-linear-gradient(45deg, transparent 0%, transparent 48%, $brand-color-black 48%,  $brand-color-black 52%, transparent 52%, transparent 100%);
 }
+
+.force-bigger-screen {
+  position: fixed;
+  z-index: 1000;
+  background: $brand-color-black;
+  color: white;
+  width: 100%;
+  height: 100%;
+  a {
+    color: $brand-color-green;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
