--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -140,6 +140,10 @@ body {
   color: white;
   width: 100%;
   height: 100%;
+  text-align: center;
+  padding-top: 200px;
+  padding-left: 24px;
+  padding-right: 24px;
   a {
     color: $brand-color-green;
     &:hover {
