Tweak purchases detail show/hide button

--- a/assets/css/storefront/components/_tables.scss
+++ b/assets/css/storefront/components/_tables.scss
@@ -25,6 +25,8 @@
     }
   }
   .detail-btn {
+    width: 56px;
+    text-align: center;
     margin-left: auto;
     margin-top: auto;
     margin-bottom: auto;
