Add visual feedback for invoice generation

--- a/assets/css/storefront/components/_orders.scss
+++ b/assets/css/storefront/components/_orders.scss
@@ -38,9 +38,11 @@
   }
   .download {
     color: $brand-color-green;
-    text-decoration: underline;
     font-size: $font-size-xs-fixed;
     cursor: pointer;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
