--- a/assets/css/storefront/components/_search.scss
+++ b/assets/css/storefront/components/_search.scss
@@ -13,9 +13,10 @@ $font-size-xs-fixed: 12px;
     box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.2);
     &__header {
       height: 40px;
-      border-bottom: 1px solid $gray-color-1;
-      padding: 5px;
-      font-size: $font-size-h4;
+      border-bottom: 1px solid #eee;
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      padding: 12px 0px 4px;
     }
     &__body {
       max-height: 400px;
