Tweak features of the week

--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -160,7 +160,27 @@
       margin-bottom: 30px;
       margin-left: auto;
       margin-right: auto;
-      max-width: 800px;
+      &__info {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+      }
+      &__image {
+        width: 60%;
+        display: flex;
+        height: auto;
+        margin-top: auto;
+        img {
+          &.resize {
+          }
+          object-fit: contain;
+          //max-width: 100%;
+          //max-height: 100%;
+          width: 100%;
+          height: 100%;
+          margin-top: auto;
+        }
+      }
       &__content {
         position: relative;
         padding-top: 50px;
@@ -169,22 +189,18 @@
         padding-bottom: 30px;
         width: 100%;
         height: 100%;
-        -moz-background-size: auto 100%;
-        -webkit-background-size: auto 100%;
-        background-origin: content-box;
-        background-position: right bottom;
-        background-repeat: no-repeat;
-        background-size: auto 100%;
         &__artist {
           padding-top: 1em;
+          line-height: 1.2;
           font-size: 1.8em;
         }
         &__title {
+          margin-top: 0.8rem;
           font-size: 1.8em;
           color: #313532;
           opacity: .5;
-          width: 40%;
-          height: 68px;
+          line-height: 1.2;
+          height: 54px;
           overflow: hidden;
           text-overflow: ellipsis;
         }
