--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -168,14 +168,10 @@
       &__image {
         width: 60%;
         display: flex;
-        height: auto;
+        height: 100%;
         margin-top: auto;
         img {
-          &.resize {
-          }
           object-fit: contain;
-          //max-width: 100%;
-          //max-height: 100%;
           width: 100%;
           height: 100%;
           margin-top: auto;
@@ -188,7 +184,7 @@
         padding-right: 30px;
         padding-bottom: 30px;
         width: 100%;
-        height: 100%;
+        max-height: 360px;
         &__artist {
           padding-top: 1em;
           line-height: 1.2;
