Add EU cookie warning

--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -41,5 +41,6 @@
 @import "components/mobile";
 @import "components/filter-modal";
 @import "components/info";
+@import "components/cookie";
 
 @import "components/newsletter";
