--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -171,10 +171,10 @@
         height: 100%;
         margin-top: auto;
         img {
-          object-fit: contain;
-          width: 100%;
-          height: 100%;
+          width: auto;
+          max-height: 240px;
           margin-top: auto;
+          margin-left: auto;
         }
       }
       &__content {
@@ -184,7 +184,7 @@
         padding-right: 30px;
         padding-bottom: 30px;
         width: 100%;
-        max-height: 320px;
+        height: 100%;
         &__artist {
           padding-top: 1em;
           line-height: 1.2;
