--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -179,10 +179,7 @@
       }
       &__content {
         position: relative;
-        padding-top: 50px;
-        padding-left: 63px;
-        padding-right: 30px;
-        padding-bottom: 30px;
+        padding: 48px;
         width: 100%;
         height: 100%;
         &__artist {
