--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -151,3 +151,11 @@ body {
     }
   }
 }
+
+.link {
+  color: $brand-color-green;
+  cursor: pointer;
+  &:hover {
+    text-decoration: underline;
+  }
+}
