Push ugly warning to front

--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -165,6 +165,7 @@ body {
   top: 150px;
   left: 350px;
   margin-right: auto;
+  z-index: 100;
   background: $brand-secondary-color-red;
   color: white;
 }
