Make invoice downloadable only after pickup

--- a/assets/css/storefront/components/_orders.scss
+++ b/assets/css/storefront/components/_orders.scss
@@ -43,6 +43,10 @@
     &:hover {
       text-decoration: underline;
     }
+    &.disabled {
+      color: $brand-secondary-color-red;
+      cursor: not-allowed;
+    }
   }
 }
 
