--- a/assets/css/storefront/components/_customer-info.scss
+++ b/assets/css/storefront/components/_customer-info.scss
@@ -3,6 +3,7 @@
     margin-bottom: 2rem;
   }
   &-panel {
+    padding-top: 32px;
     h1, h2, h3, h4, h5 {
       margin: inherit;
       margin-bottom: 1rem;
