--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -140,6 +140,7 @@ body {
   position: fixed;
   z-index: 1000;
   background: $brand-color-black;
+  top: 0;
   color: white;
   width: 100%;
   height: 100%;
