--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -1,7 +1,7 @@
 #audioplayer {
   background-color: $brand-color-black;
   height: 70px;
-  bottom: 0;
+  bottom: 70px;
   width: 100%;
   position: fixed;
   z-index: 10;
@@ -125,9 +125,9 @@
   background-color: $brand-color-black;
   color: $gray-color-1;
   position: fixed;
-  bottom: 0;
+  bottom: 70px;
   z-index: 9;
-  max-height: 50%;
+  max-height: 80%;
   width: 100%;
   font-size: $font-size-sm;
   overflow-y: scroll;
@@ -148,7 +148,7 @@
       opacity: 0.1;
     }
     &:last-child {
-      margin-bottom: 70px;
+      margin-bottom: 140px;
     }
   }
   .play-box {
