--- a/assets/css/storefront/components/_footer.scss
+++ b/assets/css/storefront/components/_footer.scss
@@ -1,35 +1,34 @@
 .footer {
-  background-color: $gray;
-  padding: $global-padding * 2 0;
-  margin-top: $global-margin * 8;
-  @include media-breakpoint-down(xs) {
-    text-align: center;
+  height: 70px;
+  font-size: $font-size-sm;
+  background-color: #fff;
+  display: flex;
+  border-top: 1px solid $gray-color-2;
+  z-index: 11;
+  position: fixed;
+  bottom: 0;
+  justify-content: space-between;
+  .logo-copyright {
+    margin: auto 0;
+    padding: 16px;
+    color: $gray-color-1;
   }
-  &__logo {
-    margin-bottom: $global-margin;
-    @include media-breakpoint-down(md) {
-      height: 30px;
-    }
-    @include media-breakpoint-down(sm) {
-      height: 40px;
-    }
-  }
-  ul {
-    list-style: none;
-    padding-left: 0;
+  .terms {
+    margin: auto 0;
     a {
-      color: $white;
-      line-height: 2;
+      color: $brand-color-green;
+      padding-right: 4px;
+      padding-left: 2px;
+      &:last-child {
+        padding-right: inherit;
+      }
+      &:first-child {
+        padding-left: inherit;
+      }
     }
   }
-  a {
-    transition: 0.3s;
-    &:hover {
-      text-decoration: none;
-      opacity: 0.6;
-    }
-    &.github-footer {
-      margin-right: $global-margin;
-    }
+  .creators {
+    margin: auto 0;
+    padding: 16px;
   }
 }
