--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -40,10 +40,10 @@
     background-color: rgba(248,247,245,1);
     letter-spacing: 1px;
     height: 654px;
-    padding-left: 9999px;
-    padding-right: 9999px;
-    margin-left: -9999px;
-    margin-right: -9999px;
+    //padding-left: 9999px;
+    //padding-right: 9999px;
+    //margin-left: -9999px;
+    //margin-right: -9999px;
 
     &__content {
       position: relative;
