--- a/assets/css/storefront/components/_footer.scss
+++ b/assets/css/storefront/components/_footer.scss
@@ -1,13 +1,16 @@
 .footer {
+  width: 100%;
   height: 70px;
   font-size: $font-size-sm;
   background-color: #fff;
-  display: flex;
   border-top: 1px solid $gray-color-2;
   z-index: 11;
   position: fixed;
   bottom: 0;
-  justify-content: space-between;
+  &-flex {
+    display: flex;
+    justify-content: space-between;
+  }
   .logo-copyright {
     margin: auto 0;
     padding: 16px;
