--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -103,19 +103,25 @@
   &__logo {
     display: inline-block;
     .menu-icon-mobile {
-      position: relative;
-      display: inline-block;
-      span {
-        position: absolute;
-        top: 1.3rem;
-        left: 1.1rem;
-        text-transform: uppercase;
-        font-size: 0.45rem;
+      //position: relative;
+      //display: inline-block;
+      .burger-menu {
+        &:before {
+          top: inherit;
+          background: $brand-color-black;
+        }
       }
-      img {
-        max-height: 20px;
-        vertical-align: top;
-      }
+      //span {
+      //  position: absolute;
+      //  top: 1.3rem;
+      //  left: 1.1rem;
+      //  text-transform: uppercase;
+      //  font-size: 0.45rem;
+      //}
+      //img {
+      //  max-height: 20px;
+      //  vertical-align: top;
+      //}
     }
   }
   &__search {
@@ -140,7 +146,7 @@
       background-color: $white;
       z-index: 4;
       border-bottom: 1px solid $gray;
-      height: inherit;
+      height: 80px;
     }
     .static {
       position: static;
@@ -149,62 +155,6 @@
       z-index: 4;
       @include media-breakpoint-up(lg) {
         line-height: 2.4rem;
-      }
-      .cart__icon {
-        color: $body-color;
-        display: block;
-        border: solid 1px transparent;
-        border-radius: 4px 4px 0 0;
-        padding: $global-padding * 2;
-        position: absolute;
-        right: 0;
-        top: 0;
-        z-index: 4;
-        @include media-breakpoint-down(sm) {
-          position: relative;
-          padding: 2rem 1rem 2rem 0;
-        }
-        &.hover {
-          text-decoration: none;
-          background: $white;
-          border-top: solid 1px $gray;
-          border-left: solid 1px $gray;
-          border-right: solid 1px $gray;
-          border-bottom: solid 1px $white;
-          @include media-breakpoint-down(sm) {
-            border: solid 1px transparent;
-            background: none;
-            padding: 2rem 1rem 2rem 0;
-          }
-        }
-        &:hover {
-          text-decoration: none;
-        }
-        .cart-label {
-          padding-right: $global-padding / 2;
-        }
-        .badge {
-          position: absolute;
-          right: 20px;
-          top: 20px;
-          background-color: $blue;
-          border-radius: 100px;
-          color: $white;
-          width: 30px;
-          height: 30px;
-          text-align: center;
-          line-height: 2;
-          &.empty {
-            background-color: $dark-gray;
-          }
-          &.reserve {
-            background-color: $brand-secondary-color-yellow !important;
-            //opacity: 90;
-          }
-          @include media-breakpoint-down(sm) {
-            right: 0;
-          }
-        }
       }
     }
     &__menu-toggle {
@@ -543,12 +493,37 @@
       }
     }
   }
+  &__icon {
+    .cart-svg {
+      height: 26px;
+      width: 26px;
+      * path {
+        fill: $brand-color-black;
+      }
+      #Symbols {
+        opacity:1;
+      }
+    }
+  }
 }
 
 .cart-label {
   margin-right: 0.5em;
 }
 
-.add-to-cart-svg {
-
+.menu-icon-mobile {
+  .burger-menu {
+    padding-top: 6px;
+    padding-right: 4px;
+    margin: 0 0 0 auto;
+    &:before {
+      top: inherit;
+      width: 20px;
+      height: 2px;
+      background: $brand-color-black;
+      box-shadow:
+              $brand-color-black 0px 0.4em 0px 0px,
+              $brand-color-black 0px 0.8em 0px 0px
+    }
+  }
 }
