--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -225,6 +225,9 @@
   width: 100vw;
   background-color: $gray-color-5;
   padding-bottom: 150px;
+  @include media-breakpoint-down(md) {
+    margin-top: 0px;
+  }
 }
 
 .feature-category {
