--- a/assets/css/storefront/components/_footer.scss
+++ b/assets/css/storefront/components/_footer.scss
@@ -12,12 +12,16 @@
     justify-content: space-between;
   }
   .logo-copyright {
+    width: 33.33%;
     margin: auto 0;
     padding: 16px;
     color: $gray-color-1;
   }
   .terms {
+    width: 33.33%;
     margin: auto 0;
+    text-align: center;
+
     a {
       color: $brand-color-green;
       padding-right: 4px;
@@ -31,6 +35,8 @@
     }
   }
   .creators {
+    text-align: right;
+    width: 33.33%;
     margin: auto 0;
     padding: 16px;
   }
