--- a/assets/css/storefront/components/_footer.scss
+++ b/assets/css/storefront/components/_footer.scss
@@ -7,6 +7,7 @@
   z-index: 11;
   position: fixed;
   bottom: 0;
+  display: flex;
   &-flex {
     display: flex;
     justify-content: space-between;
