--- a/assets/css/storefront/components/_login.scss
+++ b/assets/css/storefront/components/_login.scss
@@ -45,6 +45,12 @@
         }
       }
     }
+    &.created {
+      padding: 0;
+    }
+    &__instructions {
+      font-size: 18pt;
+    }
   }
   &__form {
     margin-bottom: 16.6px;
@@ -61,6 +67,9 @@
         &:hover {
           text-decoration: underline;
         }
+      }
+      &.created {
+        padding: 0;
       }
       background: transparent;
       padding: $global-padding * 2 $global-padding * 5;
