--- a/assets/css/storefront/components/_product-page.scss
+++ b/assets/css/storefront/components/_product-page.scss
@@ -83,10 +83,28 @@
       }
       &.one {
         background-color: $brand-secondary-color-yellow;
+        &:before {
+          position: absolute;
+          bottom: 0%;
+          left: 180%;
+          padding: 7px;
+          width: 160px;
+          -webkit-border-radius: 3px;
+          -moz-border-radius: 3px;
+          border-radius: 3px;
+          color: $brand-color-black;
+          content: " ";
+          margin-bottom: -2px;
+          margin-left: -38px;
+          text-align: center;
+          font-size: 14px;
+          line-height: 1.2;
+          background-image: url('~assets/images/warning.png');
+          background-repeat: no-repeat;
+        }
       }
       &.out, &.deleted {
         background-color: $brand-secondary-color-red;
-
       }
     }
     &__description {
