--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -7,6 +7,9 @@
     display: inline-block;
     padding-top: 1.1em;
     border-bottom: 1px solid $gray-color-2;
+    @include media-breakpoint-down(md) {
+      margin-top: 32px;
+    }
   }
   h1 {
     font-size: 3rem;
@@ -16,8 +19,6 @@
     line-height: 38px;
     letter-spacing: -1px;
     display: inline-block;
-    //vertical-align: middle;
-    //margin-top: 65px;
   }
   h3 {
     margin-top: 2em;
@@ -60,7 +61,7 @@
         background-position: 0 250px;
         background-size: 100% auto;
         height: 100%;
-        margin-top: 120px;
+        margin-top: 100px;
         padding-top: 0;
       }
 
