Change code for nuxt 1.4

--- a/assets/css/storefront/components/_product-page.scss
+++ b/assets/css/storefront/components/_product-page.scss
@@ -99,7 +99,7 @@
           text-align: center;
           font-size: 14px;
           line-height: 1.2;
-          background-image: url('~assets/images/warning.png');
+          background-image: url('~/assets/images/warning.png');
           background-repeat: no-repeat;
         }
       }
