--- a/assets/css/storefront/components/_release.scss
+++ b/assets/css/storefront/components/_release.scss
@@ -49,7 +49,7 @@ $font-factor: 0.9;
           background-color: #000;
           background-color: hsla(0, 0%, 20%, 0.9);
           color: #fff;
-          background-image: url('~assets/images/warning.png');
+          background-image: url('~/assets/images/warning.png');
           background-repeat: no-repeat;
           background-position-x: 95%;
           background-position-y: 95%;
