--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -432,6 +432,9 @@
 
 .agile {
   &__list {
+    @include media-breakpoint-down(sm) {
+      height: 420px;
+    }
     height: 350px;
   }
   &__track {
@@ -452,7 +455,8 @@
   img {
     max-width: 100%;
     width: 100%;
-    min-height: 100%;
+    min-height: 80%;
+    max-height: 80%;
     height: 100%;
   }
   .release-name {
