--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -11,6 +11,9 @@
     }
   }
   &__account {
+    @include media-breakpoint-down(md) {
+      display: none;
+    }
     position: fixed;
     background-color: white;
     z-index: 20;
