--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -147,7 +147,7 @@
     @include media-breakpoint-down(md) {
       position: fixed;
       top: 0;
-      width: 100vw;
+      //width: 100vw;
       background-color: $white;
       z-index: 4;
       border-bottom: 1px solid $gray;
