--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -369,11 +369,11 @@
   }
 }
 
-@media (min-width: 576px) {
-  .d-sm-none {
-    display: none !important;
-  }
-}
+//@media (min-width: 576px) {
+//  .d-sm-none {
+//    display: none !important;
+//  }
+//}
 
 @media (min-width: 768px) {
   .d-md-none {
