--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -467,6 +467,18 @@
 }
 
 @include media-breakpoint-down(md) {
+  .frontpage__weekly__item__content {
+    img {
+      max-width: 100%;
+      width: 100%;
+      min-height: 80%;
+      max-height: 80%;
+      height: 100%;
+    }
+  }
+}
+
+@include media-breakpoint-down(md) {
   .release-name {
     margin-top: 2em;
     max-width: 200px;
