--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -468,14 +468,16 @@
 
 @include media-breakpoint-down(md) {
   .frontpage__weekly__item__content {
-    img {
-      max-width: 100%;
-      width: 100%;
-      min-height: 80%;
-      max-height: 80%;
-      height: 100%;
+    &.mobile {
+      img {
+        max-width: 100%;
+        width: 100%;
+        min-height: 80%;
+        max-height: 80%;
+        height: 100%;
+      }
+      height: inherit;
     }
-    height: inherit;
   }
 }
 
