--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -469,14 +469,19 @@
 @include media-breakpoint-down(md) {
   .frontpage__weekly__item__content {
     &.mobile {
-      img {
+      .feature-image {
         max-width: 100%;
         width: 100%;
         min-height: 80%;
         max-height: 80%;
         height: 100%;
+        padding-left: 8px;
       }
       height: inherit;
+      padding: 12px !important;
+      .release-name {
+        max-width: 240px !important;
+      }
     }
   }
 }
@@ -511,6 +516,23 @@
       text-overflow: ellipsis;
       max-width: 120px;
       margin-bottom: 14px;
+    }
+  }
+}
+
+
+@include media-breakpoint-down(sm) {
+  .list-item {
+    height: auto !important;
+    width: 100%;
+    padding-bottom: 0px;
+    .list-item-outer {
+      position: relative;
+      width: 100%;
+      .release-list-play {
+        margin: auto auto 8px 8px;
+        display: block;
+      }
     }
   }
 }
