--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -293,6 +293,9 @@
           fill: $gray-color-1;
         }
       }
+      @include media-breakpoint-down(sm) {
+        display: none;
+      }
     }
     a {
       text-transform: capitalize;
