--- a/assets/css/storefront/components/_product-page.scss
+++ b/assets/css/storefront/components/_product-page.scss
@@ -156,6 +156,7 @@
     @include media-breakpoint-down(md) {
       padding-left: 0px !important;
       padding-right: 0px !important;
+      margin-top: 2em;
     }
     h4 {
       margin-bottom: 1em !important;
@@ -188,7 +189,7 @@
     padding-right: 2em;
     margin-bottom: 2em;
     &:last-child {
-      padding-right: inherit;
+      padding-right: 0;
     }
     .carousel-control {
       &-prev {
