--- a/assets/css/storefront/components/_release.scss
+++ b/assets/css/storefront/components/_release.scss
@@ -100,7 +100,7 @@ $font-factor: 0.9;
   }
   &__tracklist {
     padding-left: 4em;
-    padding-bottom: 8em;
+    //padding-bottom: 8em;
     &__item {
       position: relative;
       display: flex;
