--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -12,9 +12,11 @@
       margin-top: 32px;
     }
     @include media-breakpoint-down(sm) {
-      margin-top: 16px;
+      margin-top: 26px;
       margin-bottom: 16px;
-      height: 2.8em;
+      height: auto;
+      display: flex;
+      padding-bottom: 16px;
     }
   }
   h1 {
@@ -27,6 +29,7 @@
     display: inline-block;
     @include media-breakpoint-down(sm) {
       font-size: 1.5rem;
+      width: 100%;
     }
   }
   h3 {
@@ -75,6 +78,10 @@
         height: 100%;
         margin-top: 100px;
         padding-top: 0;
+      }
+
+      @include media-breakpoint-down(sm) {
+        margin-top: 60px;
       }
 
       .slider {
