--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -169,3 +169,7 @@
   background: $brand-secondary-color-red;
   color: white;
 }
+
+.release-filter-panel {
+  border-bottom: 1px solid $gray-color-2;
+}
