--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -563,3 +563,12 @@
     z-index: 3;
   }
 }
+
+.chart-item {
+  @include media-breakpoint-down(sm) {
+    margin-bottom: 1.5em;
+    .charts-infobox__name {
+      margin-bottom: 0;
+    }
+  }
+}
