--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -256,6 +256,40 @@
   width: auto;
 }
 
+
+@include media-breakpoint-down(sm) {
+  .charts__detail {
+    margin-top: 0;
+    .release__button-bar {
+      margin-right: 0;
+      .play {
+        margin-right: 0;
+      }
+      &__add-to-cart {
+        padding: 0;
+        width: 36px !important;
+        span {
+          display: none;
+        }
+        img {
+          margin-right: 3px;
+        }
+      }
+    }
+    &__info-box {
+      padding-right: 25px;
+      padding-left: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+    &__thumb {
+      padding-top: 25px;
+      padding-bottom: 25px;
+      padding-left: 0;
+    }
+  }
+}
+
 .list-item {
   height: 270px !important;
 }
