Add button margin

--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -263,7 +263,7 @@
     .release__button-bar {
       margin-right: 0;
       .play {
-        margin-right: 0;
+        //margin-right: 0;
       }
       &__add-to-cart {
         padding: 0;
