Make mobile important

--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -272,7 +272,7 @@
           display: none;
         }
         img {
-          margin-right: 3px;
+          margin-right: 3px !important;
         }
       }
     }
