--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -264,6 +264,12 @@
     width: 100%;
     position: relative;
     margin-bottom: 40px;
+    @include media-breakpoint-down(sm) {
+      margin-top: 2em;
+      &:first-child {
+        margin-top: inherit;
+      }
+    }
     h2 {
       margin-bottom: 0px !important;
       display: inline-block;
