--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -262,9 +262,6 @@
     margin-top: 0;
     .release__button-bar {
       margin-right: 0;
-      .play {
-        //margin-right: 0;
-      }
       &__add-to-cart {
         padding: 0;
         width: 36px !important;
@@ -286,6 +283,30 @@
       padding-top: 25px;
       padding-bottom: 25px;
       padding-left: 0;
+    }
+  }
+
+  .mobile-button-bar {
+    margin-bottom: 8px;
+    .release__button-bar {
+      margin-right: 0;
+      margin-top: 0;
+      flex-direction: column-reverse !important;
+      justify-content: space-between !important;
+      height: inherit;
+      .play {
+        margin-right: 0;
+      }
+      &__add-to-cart {
+        padding: 0;
+        width: 36px !important;
+        span {
+          display: none;
+        }
+        img {
+          margin-right: 3px !important;
+        }
+      }
     }
   }
 }
