--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -260,6 +260,11 @@
   border-bottom: 1px solid $gray-color-2;
   min-height: 300px;
   padding-bottom: 2em;
+  @include media-breakpoint-down(sm) {
+    border-bottom: 0;
+    min-height: 300px;
+    padding-bottom: 0;
+  }
   &__header {
     width: 100%;
     position: relative;
