--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -173,3 +173,12 @@
 .release-filter-panel {
   border-bottom: 1px solid $gray-color-2;
 }
+
+.bg {
+  position: absolute;
+  width: 100vw;
+  height: 100%;
+  min-width: 100%;
+  background-color: rgba(232, 230, 224, 0.3);
+  transform: translateX(-4%);
+}
