Hide play button on mobile

--- a/assets/css/storefront/components/_charts.scss
+++ b/assets/css/storefront/components/_charts.scss
@@ -334,6 +334,9 @@ $bestseller-item-padding: 7px;
               .chart-list-play {
                 display: inline-block;
                 border-radius: 0px !important;
+                @include media-breakpoint-down(sm) {
+                  display: none;
+                }
               }
             }
           }
