--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -45,7 +45,7 @@
       margin-top: 2em !important;
     }
   }
-  .release-list_panel {
+  .release-list-panel {
     h3 {
       margin-top: 2em !important;
     }
