--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -22,6 +22,9 @@
   }
   &__line {
     padding: $global-padding * 2;
+    @include media-breakpoint-down(sm) {
+      padding: 2rem 0;
+    }
     margin-top: 0px !important;
 
     border-bottom: 1px solid $gray-color-2;
@@ -100,9 +103,15 @@
       font-size: $font-size-h2;
       opacity: 0.5;
       margin-top: -6px;
+      @include media-breakpoint-down(sm) {
+        margin-top: 1.4rem;
+      }
     }
     &__cell {
       display: inline-flex;
+      @include media-breakpoint-down(sm) {
+        margin-top: 1.5rem;
+      }
     }
   }
   &__total {
@@ -271,6 +280,9 @@
     background-color: white;
     padding: $global-padding * 2 $global-padding;
     margin-top: $global-margin * 2;
+    @include media-breakpoint-down(sm) {
+      flex-direction: column-reverse !important;
+    }
   }
   &__continue-button {
     height: 64px;
