--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -675,3 +675,13 @@
   }
 }
 
+@include media-breakpoint-down(sm) {
+  .login__form__btn {
+    &__login {
+      padding-right: 0;
+    }
+    &__register {
+      margin-top: 0.5rem
+    }
+  }
+}
