--- a/assets/css/storefront/components/_buttons.scss
+++ b/assets/css/storefront/components/_buttons.scss
@@ -77,9 +77,12 @@ a.btn {
     color: $white;
   }
   &-row {
-    margin-left: 0px;
-    margin-right: 0px;
+    margin-left: 0;
+    margin-right: 0;
     justify-content: space-between;
+    @include media-breakpoint-down(sm) {
+      margin-top: 1.4rem;
+    }
   }
 }
 
